--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,15 @@ h1 {
   font-weight: 300;
   font-size: 2rem;
 }
+
+h2 {
+  margin-bottom: 2.5rem;
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+h2 + hr {
+  margin-bottom: 2.5rem;
+  border-top: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
