--- a/src/pages/settings/styles.scss
+++ b/src/pages/settings/styles.scss
@@ -3,11 +3,40 @@
 $layout-spacing: 2.5rem;
 $field-spacing: $layout-spacing * 0.5;
 
+.paperWrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .paper {
-  max-width: 32rem;
+  flex: 1;
   padding: $field-spacing;
+}
+
+.paper:first-child {
+  margin-right: $layout-spacing / 2;
+}
+
+.paper:last-child {
+  margin-left: $layout-spacing / 2;
 }
 
 .field {
   width: 100%;
+  margin-bottom: $field-spacing !important;
+}
+
+@media screen and (max-width: 979px) {
+  .paperWrapper {
+    flex-direction: column;
+  }
+
+  .paper:first-child {
+    margin-right: 0;
+  }
+
+  .paper:last-child {
+    margin-top: $layout-spacing;
+    margin-left: 0;
+  }
 }
