--- a/src/pages/settings/styles.scss
+++ b/src/pages/settings/styles.scss
@@ -1,7 +1,6 @@
-// stylelint-disable declaration-no-important
+@import '../../styles/variables';
 
-$layout-spacing: 2.5rem;
-$field-spacing: $layout-spacing * 0.5;
+// stylelint-disable declaration-no-important
 
 .paperWrapper {
   display: flex;
