--- a/src/pages/dashboard/styles.scss
+++ b/src/pages/dashboard/styles.scss
@@ -1,7 +1,6 @@
-// stylelint-disable declaration-no-important
+@import '../../styles/variables';
 
-$layout-spacing: 2.5rem;
-$field-spacing: $layout-spacing * 0.5;
+// stylelint-disable declaration-no-important
 
 .paperWrapper {
   display: flex;
@@ -30,12 +29,15 @@ $field-spacing: $layout-spacing * 0.5;
     flex-direction: column;
   }
 
+  .paper {
+    margin-top: $layout-spacing;
+  }
+
   .paper:first-child {
     margin-right: 0;
   }
 
   .paper:last-child {
-    margin-top: $layout-spacing;
     margin-left: 0;
   }
 }
